<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu"
        android:checkableBehavior="single">
        <item android:title="@string/schedule_section">
            <menu>
                <item
                    android:id="@+id/nav_day"
                    android:icon="@mipmap/ic_today"
                    android:title="@string/fragment_day"/>
                <item
                    android:id="@+id/nav_month"
                    android:icon="@mipmap/ic_calendar"
                    android:title="@string/fragment_month"/>
            </menu>
        </item>
        <item android:title="@string/campus_section">
            <menu>
                <item
                    android:id="@+id/nav_map"
                    android:icon="@mipmap/ic_map"
                    android:title="@string/activity_maps"/>
                <item
                    android:id="@+id/nav_buildings"
                    android:icon="@mipmap/ic_building"
                    android:title="@string/fragment_buildings"/>
                <item
                    android:id="@+id/nav_cafeterias"
                    android:icon="@mipmap/ic_restaurant"
                    android:title="@string/fragment_cafeterias"/>
                <item
                    android:id="@+id/nav_food"
                    android:icon="@mipmap/ic_food"
                    android:title="@string/food"/>
                <item
                    android:id="@+id/nav_rooms"
                    android:icon="@mipmap/ic_booking"
                    android:title="@string/fragment_ilc_rooms"/>

            </menu>
        </item>
        <item android:title="@string/information_section">
            <menu>
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@mipmap/ic_tools"
                    android:title="@string/fragment_student_tools"/>
            </menu>
        </item>
    </group>
</menu>
