<!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/map"-->
<!--    android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context="beta.qlife.ui.fragments.MapsFragment" />-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            </com.google.android.gms.maps.MapView>

</FrameLayout>
